# finance-os

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  (+1 more)
agents/: pyproject.toml
agents/scripts/: ensure-env.sh
agents/src/: __init__.py  mcp_server.py  web_api.py
agents/src/agents/: __init__.py  adversarial.py  earnings_interpreter.py  filing_analyst.py  macro_regime.py  quant_signal.py  risk_agent.py  thesis_guardian.py
agents/src/application/: __init__.py  config.py  household_math.py  pipeline_context.py  registry.py  watchlists.py
agents/src/application/contracts/: __init__.py  agents.py  household.py  knowledge_graph.py  policy.py  regime.py  ticker.py
agents/src/application/data_services/: __init__.py  base.py  etf_service.py  fred_service.py
agents/src/application/llm/: __init__.py  azure_openai_provider.py  gateway.py  litellm_provider.py  providers.py  types.py
agents/src/application/services/: __init__.py  agent_service.py  digest_service.py  household_service.py  kg_service.py  pipeline_service.py  policy_service.py  regime_service.py  ticker_service.py
agents/src/cli/: __main__.py  commands.py  main.py
agents/src/core/: __init__.py  agent.py  entity_extraction.py  knowledge_graph.py  memory.py  orchestrator.py
agents/src/pipelines/: __init__.py  research_digest.py
agents/src/tools/: __init__.py
agents/tests/: conftest.py  test_adversarial.py  test_agent.py  test_azure_openai_live.py  test_cli.py  test_config.py  test_contracts.py  test_data_services_base.py  test_earnings_interpreter.py  test_entity_extraction.py  test_etf_service.py  test_filing_analyst.py  test_fred_service.py  test_household.py  test_kg_service.py  test_knowledge_graph.py  test_llm_gateway.py  test_macro_regime.py  test_mcp_server.py  test_memory.py  test_orchestrator.py  test_pipeline_context.py  test_pipeline_live.py  test_policy_service.py  test_quant_signal.py  test_regime_service.py  test_research_pipeline.py  test_risk_agent.py  test_services.py  test_skills.py  test_thesis_guardian.py  test_ticker_service.py  test_watchlists.py  test_web_api.py
agents/tests/support/: mock_provider.py
(+66 files in other folders)
