[project]
name = "finance-os-agents"
version = "0.1.0"
description = "Domain-tuned AI agents for personal investment intelligence"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.94.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.10",
    "mypy>=1.13",
]
quant = [
    "numpy>=2.4.4",
    "pandas>=2.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
