[project]
name = "finance-os-agents"
version = "0.1.0"
description = "Domain-tuned AI agents for personal investment intelligence"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.94.0",
    "openai>=2.31.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "azure-identity>=1.19",
    "aiohttp>=3.11",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "chromadb>=1.0.0",
]

[project.scripts]
finance-os = "src.cli.main:main"
finance-os-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call external services (FRED, EDGAR, etc.)",
]
